# coingecko-cli

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: pull_request_template.md
src/: client.rs  client_bk.rs  main.rs  ping.rs  simple.rs
src/api/: asset_platforms.rs  client.rs  contract.rs  error.rs  mod.rs  ping.rs  response.rs  simple.rs  transport.rs
src/cli/: asset_platforms.rs  contract.rs  mod.rs  ping.rs  simple.rs
