[package]
name = "crypto-prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
clap = { version = "4.1.4", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking"] }
tokio = { version = "1.25.0", features = ["full"] }

