[package]
name = "crypto-prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

